2014-10-07  frellsen  <frellsen@cam>

	* bin/examples/normal_parallel.cpp: Added an example of how to use
	the CGEcollection for parallel simulations.

	* bin/tools/test_read_history.cpp: Added missing deletion of cge
	object.

	* muninn/Binner.h: Added the initialized variable and
	is_initialized() method.

	* muninn/CGE.cpp: Adopted the binner::is_initialized() method.

	* muninn/CGE.h: Made get_binner() return a non-const reference.

	* muninn/CGEcollection.h: Added the CGEcollection class for
	parallel simulations.

	* muninn/GE.cpp: Corrected bug with new_weights_variable not being
	updated when GE::estimate_new_weights(...) is called.

	* muninn/Binners/NonUniformBinner.h: Adopted the initalized
	variable from base class.

	* muninn/Binners/NonUniformDynamicBinner.h: Added support for
	presetting slope values and the include method.

	* muninn/Binners/UniformBinner.h: Adopted the initalized variable
	from base class.

2014-10-06  frellsen  <frellsen@cam>

	* bin/examples/ising.cpp: Corrected errors in help text.

2014-06-23  Jes Frellsen  <frellsen@cam>

	* bin/tools/test_read_history.cpp: Added memory as a command line
	option.

	* muninn/Factories/CGEfactory.cpp: Allowed more flexibility and
	better warning messages when reading old Muninn log files.

	* muninn/MLE/MLE.h: See MLE.cpp

	* muninn/MLE/MLE.cpp: Allowed optional mismatch between history
	size and number of free energies, when constructing new estimate.

2014-06-18  Jes Frellsen  <frellsen@cam>

	* bin/examples/ising.cpp: Corrected spelling error in options.

	* bin/examples/normal.cpp: Corrected spelling error in options.

	* bin/tools/CMakeLists.txt: Added test_read_history.

	* bin/tools/Makefile.am: Added test_read_history.

	* bin/tools/test_read_history.cpp: Added tool to check if a log
	file can be read.

	* muninn/Factories/CGEfactory.cpp: Fix problem with reading
	history written in CURRENT mode.

2014-05-30  Jes Frellsen  <frellsen@cam>

	* muninn/GE.h (GE): Fixed an indention error.
